# ocrmypdf-rapidocr

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
configs/: default.yaml
src/ocrmypdf_rapidocr/: __init__.py  engine.py  hocr.py  languages.py  options.py  plugin.py
tests/: conftest.py
tests/integration/: test_resources.py
tests/resources/fraszka/: expected.txt  meta.json
tests/resources/invoice001/: expected.txt  meta.json
