[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "ocrmypdf-rapidocr"
license = { file = "LICENSE" }
authors = [{ name = "Adrian Mazur" }]
version = "1.0.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["ocrmypdf>=17.3.0"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
